# ur5_manipulation_event_camera

./: README.md
conveyorbelt_gazebo/: CMakeLists.txt  package.xml
conveyorbelt_gazebo/msg/: BoxInfo.msg
conveyorbelt_gazebo/urdf/: blue_box.urdf  box_black.urdf  box_blue.urdf  box_green.urdf  box_orange.urdf  box_red.urdf  orange_box.urdf  red_box.urdf
conveyorbelt_gazebo/worlds/: conveyorbelt.world
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ur5_camera_movit_config/share/ament_index/resource_index/parent_prefix_path/: ur5_camera_movit_config
install/ur5_camera_movit_config/share/ur5_camera_movit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur5_camera_movit_config/share/ur5_camera_movit_config/cmake/: ur5_camera_movit_configConfig.cmake
install/ur5_camera_movit_config/share/ur5_camera_movit_config/config/: ompl_planning.yaml  ur.srdf  ur.urdf.xacro
install/ur5_camera_movit_config/share/ur5_camera_movit_config/launch/: moveit_rviz.launch.py
install/ur_description/share/ament_index/resource_index/parent_prefix_path/: ur_description
install/ur_description/share/ur_description/: package.sh
install/ur_description/share/ur_description/rviz/: view_robot.rviz
install/ur_sim/share/ur_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur_sim/share/ur_sim/urdf/: camera.xacro  ur5_camera.urdf.xacro
install/ur_simulation_gazebo/share/ament_index/resource_index/parent_prefix_path/: ur_simulation_gazebo
install/ur_simulation_gazebo/share/ur_simulation_gazebo/: package.sh
inverse_kinematics/: CMakeLists.txt  package.xml
inverse_kinematics/launch/: pick_and_place.launch.py
inverse_kinematics/src/: micro_saccade_servo.cpp  pick_place_parse.cpp  simple_pick_place.cpp  track_ik.cpp  ur5_pick_place.cpp
log/: latest_build
ros2_conveyorbelt/: CMakeLists.txt  package.xml
ros2_conveyorbelt/python/: SpawnLoop.py  SpawnRandom.py
sample_demo/: CMakeLists.txt  package.xml
sample_demo/src/: ur5_pickandplace.cpp
ur5_camera_gripper_moveit_config/: .setup_assistant  package.xml
ur5_camera_gripper_moveit_config/config/: kinematics.yaml  moveit_servo.yaml  pilz_industrial_motion_planner_planning.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf.xacro
ur5_camera_gripper_moveit_config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur5_camera_gripper_moveit_config/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ur5_camera_gripper_moveit_config/launch/log/: latest_build
ur5_camera_moveit_config/: package.xml
ur5_camera_moveit_config/config/: moveit.rviz  ompl_planning.yaml  ur.srdf
ur5_camera_moveit_config/launch/: spawn_controllers.launch.py
ur_sim/: package.xml
ur_sim/launch/: spawn_ur5_final.launch.py  spawn_ur5_table.launch.py
ur_sim/urdf/: camera.xacro  robotiq_gripper_macro.xacro  table.urdf.xacro  ur5_camera_gripper.urdf.xacro
ur_sim/worlds/: empty_with_link_attacher.world  world_table_link_ur5.world
