<?xml version="1.0"?>
<package format="3">
  <name>inverse_kinematics</name>
  <version>0.0.1</version>
  <description>UR5 pick‐and‐place using MoveIt2 + Gazebo Link Attacher (ROS2 Humble)</description>

  <maintainer email="kriskun2002@gmail.com">krishna</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- dependencies -->
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>linkattacher_msgs</depend>

  <!-- lint -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
